<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignInFragment">

    <data>
        <variable
            name="viewModel"
            type="ttbrowne.c323.finalandroidproject.AppViewModel" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="top">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25sp"
            android:layout_marginBottom="200sp"
            android:text="@string/returning_account"
            android:textColor="#000000"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/buttonSignIn"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:backgroundTint="@color/gray"
            android:layout_marginTop="16dp"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered_yet"
                android:textSize="20sp"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="17sp"
                android:backgroundTint="@color/gray"
                android:layout_marginStart="10dp" />

        </LinearLayout>
    </LinearLayout>

</layout>