<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckoutScreen">

    <!-- RecyclerView for Order Items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderItemsRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5" />


    <EditText
        android:id="@+id/addressEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        app:layout_constraintTop_toBottomOf="@id/orderItemsRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/specialInstructionsEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/special_instructions"
        app:layout_constraintTop_toBottomOf="@id/addressEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/modifyOrderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/modify_order"
        app:layout_constraintTop_toBottomOf="@id/specialInstructionsEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

    <Button
        android:id="@+id/placeOrderButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/place_order"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/modifyOrderButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>